[package]
name = "cos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version =  "0.14", features  = ["full"]}
hyper-rustls = { version = "0.22", features = ["rustls-native-certs"]}
tokio = {version = "1", features = ["full"]}
reqwest = "0.11"
anyhow = "1"
hmac-sha1 = "0.1"
hex = "0.4.3"
chrono = "0.4"
urlencoding = "2"
form_urlencoded = "1"
openssl = "*"
crc = "2"
crc64 = "1"
base64 = "0.13"
lazy_static = "1"
url = "2"
log = "0.4"
